# Charles-mcp

./: .env.example  .gitignore  AGENTS.md  LICENSE  PROVENANCE.md  README.en.md  README.md  charles-mcp-server.py  pyproject.toml  requirements.txt  run.bat
.github/: pull_request_template.md
.github/workflows/: ci.yml  publish.yml
charles_mcp/: __init__.py  client.py  config.py  live_state.py  main.py  server.py  utils.py
charles_mcp/analyzers/: __init__.py  body.py  headers.py  redaction.py  resource_classifier.py
charles_mcp/reverse/: __init__.py  config.py  models.py  server.py
charles_mcp/schemas/: __init__.py  analysis.py  history.py  live_capture.py  status.py  traffic.py  traffic_query.py
charles_mcp/services/: __init__.py  history_capture.py  live_capture.py  traffic_analysis.py  traffic_cache.py  traffic_grouping_service.py  traffic_normalizer.py  traffic_query_models.py  traffic_query_orchestrator.py  traffic_query_service.py  traffic_stats_service.py
charles_mcp/tools/: __init__.py  history.py  legacy.py  live.py  public_surface.py  reset.py  tool_contract.py
docs/: README.md  agent-workflows.md
docs/contracts/: tools.md
docs/migrations/: legacy-tools.md
docs/plans/: 2026-03-06-charles-live-capture-refactor.md  2026-03-06-charles-mcp-stabilization.md
tests/: __init__.py  test_agent_docs_contract.py  test_canonical_surface_contract.py  test_capture_services.py  test_charles_status_live.py  test_client_recording.py  test_config.py  test_docs_contract.py  test_docs_information_architecture_contract.py  test_entrypoints.py  test_history_schema.py  test_legacy_compatibility_layer.py  test_legacy_migration_contract.py  test_legacy_tools.py  test_lifecycle_policy.py  test_live_capture_lifecycle.py  test_live_capture_tools.py  test_live_state.py  test_performance_regressions.py  test_pyproject_metadata.py  test_readme_contract.py  test_schema_deprecations.py  test_server_lifespan.py  test_status_schema.py  test_tool_guidance_contract.py  test_tool_registration.py  test_traffic_analysis.py  test_traffic_analysis_tools.py  test_traffic_query_service.py
tests/vnext/: test_decode_formats.py  (+10 more)
(+17 files in other folders)
